修改dockerhost的启动脚本